--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,16 @@
 :root {
   
 }
+html {
+  scroll-behavior: smooth;
+}
 ::placeholder {
   color: #045bb388;
 }
 * {
   box-sizing: border-box;
 }
-input {
-  font-size: 1rem;
-}
+
 button, a {
   cursor: pointer !important;
   outline: none !important;
@@ -108,7 +109,8 @@ header h5, header h2{
   text-align: center;
 }
 header p {
-  width: min(600px, 100%);
+  width: 100%;
+  max-width: 600px;
   padding: 2px 10px;
   font-size: 14px;
   text-align: center;
@@ -131,7 +133,7 @@ header a {
 
 
 .contentBox {
-  padding: 70px 40px;
+  padding: 70px 10 50px;
   margin: 0;
   width: 100%;
 }
@@ -141,17 +143,22 @@ header a {
   margin: 0 0 0 20px;
   display: flex;
   flex-direction: column;
-  padding: 0;
+  padding: 10px;
 }
 .prod-card h1 {
+  width: 100%;
   text-transform: uppercase;
   text-align: center;
-  margin: 20px 0 20px;
+  background-color: black;
+  color: white;
+  padding: 5px 0;
 }
-#produk p.prod-note {
-  text-align: left;
-  font-size: 12px;
-  padding: 3px 40px;
+.prod-card p.prod-ket {
+  text-align: center;
+  font-size: 1rem; 
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
 }
 .prod-card .box {
   width: 100%;
@@ -159,15 +166,12 @@ header a {
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding: 0;
-  margin: 30px auto 2px;
-  border-top: 2px solid #234;
+  margin: 5px auto 2px;
 }
-.prod-card p.prod-ket {
-  text-align: center;
-  font-size: 1rem;
-  width: min(700px, 100%);
-  margin: 0 auto;
-  padding: 3px 40px;
+#produk p.prod-note {
+  text-align: left;
+  font-size: 10px;
+  padding: 3px 30px;
 }
 
 
@@ -319,8 +323,7 @@ header a {
   background-color: #123;
   color: white;
   font-weight: bold;
-}
-
+} 
 .contentBox {
   padding: 70px 40px;
 }
@@ -339,20 +342,21 @@ header a {
   background-color: rgba(0,0,0,.1);
 }
 .order-box h1 {
-  text-align: center;
   text-transform: uppercase;
-  color: #045cb3;
+  text-align: center;
+  color: #044383;
 }
 .order-box .order-container{
   min-height: 10%;
   display: flex;
   flex-direction: column;
   position: relative;
-  width: min(700px, 100%);
+  width: 100%;
+  max-width: 700px;
   margin: 0 auto;
 }
 .order-container label{
-  color: #045cb3;
+  color: #044383;
 }
 
 .order-container .order-input, textarea {
@@ -360,13 +364,13 @@ header a {
   padding: 7px;
   padding-left: 10px;
   margin: 0 0 15px;
-  border: 2px solid #045cb3;
+  border: 2px solid #044383;
   border-radius: 5px;
 	font-size: 14px;
   position: relative;
   outline: none;
   background-color: transparent; 
-  color: #045cb3;
+  color: #044383;
 }
 .order-container textarea {
 	height: 100px;
@@ -377,7 +381,7 @@ header a {
   text-decoration: underline;
   text-transform: uppercase;
   font-weight: bold;
-  color: #045cb3;
+  color: #044383;
 }
 
 
@@ -387,13 +391,13 @@ header a {
 .order-container .order-pilih {
   padding: 10px 0 10px 30px;
   margin-bottom: 15px;
-  border-bottom: 1px solid #045cb3;
+  border-bottom: 1px solid #044383;
 }
 .order-container .order-pilih p {
   font-size: 14px;
   margin: 10px auto;
   text-align: center;
-  color: #045cb3;
+  color: #044383;
 }
 .order-container .order-pilih .order-item{
   margin: 3px 0;
@@ -402,25 +406,25 @@ header a {
   align-items: center;
   font-size: 1rem;
   padding: 0;
-  color: #045cb3;
+  color: #044383;
 }
 .order-container .order-pilih .order-item li{
   flex: 1;
-  color: #045cb3;
+  color: #044383;
 }
 .order-container .order-pilih .order-item input{
   margin: 0 25px;
   width: 80px;
   text-align: center;
-  color: #045cb3;
-  border: 2px solid #045cb3;
+  color: #044383;
+  border: 2px solid #044383;
   border-radius: 6px;
   background: transparent;
 }
 .order-container .order-pilih .order-item i{
   margin: 0 5px;
   font-size: 1rem;
-  color: #045cb3;
+  color: #044383;
 }
 
 
@@ -431,41 +435,41 @@ header a {
 .order-container .total-harga {
   margin: 0 0 5px;
   font-size: 1rem;
-  color: #045cb3;
+  color: #044383;
 }
 .order-container .bayar-box {
-  margin: 5px 0;
+  margin: 5px 0 30px;
 }
 .order-container .bayar-box p{
   margin: 2px 0 5px;
   font-size: 1rem;
-  color: #045cb3;
+  color: #044383;
 }
 .order-container .bayar-box label{
   font-size: 1rem;
-  color: #045cb3;
+  color: #044383; 
 }
 .order-container .bayar-box .bayar-pilih{
   width: 100%;
-  display: flex; 
-  color: #045cb3;
+  display: flex;
+  color: #044383;
 }
 .order-container .bayar-box .bayar-pilih textarea{
   width: 100%;
   font-size: 13px;
   display: none;
-  color: #045cb3;
+  color: #044383;
 }
 .order-container .bayar-box .bayar-pilih p{
   width: 100%;
   font-size: 1rem;
-  color: #045cb3;
+  color: #044383;
   display: none;
 }
 .order-container .label0{
   font-size: 1rem;
   padding: 0;
-  color: #045cb3;
+  color: #044383;
 }
 .order-container button.order-button{
   margin-top: 10px;
