--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ header img.header-bg {
   object-fit: cover;
   object-position: center;
   filter: brightness(10%);
-  z-index: -1;
+  z-index: ;
   padding: 0;
 }
 header img.header-logo {
