--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ nav.navbar {
   background: rgba(0,0,0,.5);
   backdrop-filter: blur(5px);
   transition: all .4s ease-in-out;
+  z-index: 10;
 }
 a.navbar-brand {
   margin:0;
@@ -83,7 +84,6 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* background-color: #123; */
 }
 header span{
   font-size: 14px;
@@ -106,6 +106,7 @@ header img.header-logo {
   border-radius: 100%;
   border: 2px solid white;
   box-shadow: 0 0 100px rgba(0,0,0,.5);
+  z-index: 2;
 }
 header h5, header h2{
   text-align: center;
