--- a/css/style.css
+++ b/css/style.css
@@ -84,10 +84,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url('../asset/logo.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
+  
 }
 header span{
   font-size: 14px;
@@ -99,9 +96,12 @@ header .header-bg {
   height: 100%;
   width: 100%;
   margin: 0;
-  background-color: #123;
-  opacity: 97%;
-  /* z-index: -1; */
+  background-image: url('../asset/logo.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  filter: brightness(10%);
+  z-index: -1;
 }
 header img.header-logo {
   position: relative;
