--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ button, a {
 }
 
 body {
-    font-size: 15pt;
     padding: 0;
     margin: 0;
 }
@@ -135,7 +134,37 @@ header a {
 
 
 
-
+#tambah-sukses {
+  position: fixed;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: min(400px, 70%);
+  padding: 4px 10px;
+  border-radius: 5px;
+  background: #123;
+  color: white;
+  border: 2px solid white;
+  box-shadow: 0 0 4px rgba(0, 0, 0, .5);
+  transition: all 1s ease-in;
+  font-size: 13px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: -10;
+  opacity: 0;
+}
+#tambah-sukses p {
+  margin: 0;
+  text-align: center;
+  padding: 0;
+}
+#tambah-sukses.add {
+  display: block;
+  opacity: 1;
+  top: 95%;
+  z-index: 10;
+}
 
 .contentBox {
   padding: 70px 10 50px;
@@ -389,7 +418,11 @@ header a {
 }
 
 
-
+.order-container i.i {
+  font-size: 10px;
+  margin: 0;
+  padding: 5px 0 0;
+}
 
 
 .order-container .order-pilih {
