--- a/css/responsive.css
+++ b/css/responsive.css
@@ -29,10 +29,13 @@
 
 
     .card{
-        margin: 10px auto;
+        margin: 10px 5px;
     }
 
 
+    .card .text .desc::-webkit-scrollbar {
+        display: none;
+    }
     .order-box {
         padding: 50px 10px 10px;
     }
